tests/sksl/errors/ReservedNameDvec4.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'dvec4'
1 error
